# dgi-doctrine

./: .env  .env.example  1.py  Dockerfile  README.md  a.py  api.json  celery_config.py  docker-entrypoint.sh  main.py  manage.py  pyproject.toml  quick_test_chat.py  requirements.txt  setup.sh  start_app.sh  stop_app.sh  test_gemini_simple.py  test_priority_system.py  test_rag_endpoints.py  test_rag_fallback.py
.github/workflows/: deploy.yml  main_dotrine.yml  workflow.yml
core/: settings.py  urls.py
doctrine/: admin.py  filters.py  managers.py  middleware.py  models.py  pagination.py  permissions.py  serializers.py  signals.py  storage.py  tasks.py  urls.py  views.py  views_1.py
doctrine/management/commands/: populate_cache.py
doctrine/migrations/: 0001_initial.py  0002_alter_user_managers.py
doctrine/services/: document_processor.py  gemini_database_rag.py.txt  huggingface_rag.py  huggingface_rag.py.txt  langchain_rag.py  rag.py  rag.py.txt  rag_service.py
templates/: a.txt
templates/registration/: login.html
