[project]
name = "dgi-extractor"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.5.3",
    "celery-types==0.23.0",
    "django>=5.2.4",
    "django-perms>=2.1.0",
    "drf-spectacular>=0.28.0",
    "drf-yasg>=1.21.10",
    "psycopg2-binary>=2.9.10",
    "python-decouple>=3.8",
    "xlsxwriter>=3.2.5",
]
